Rewrote EsPipelineConvert